styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap");

:root {
  --bg-main: rgb(240, 234, 218);
  --dark-200: rgba(12, 12, 10, 0.5);
  --dark-400: rgba(12, 12, 10, 0.8);
  --dark-700: rgba(60, 60, 58, 1);
  --red-400: #f9423a;
  --bg-main-low-opacity: rgba(240, 234, 218, 0.2);
  --off-white: #f5f5f5;
}

html {
  scroll-behavior: smooth;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Jost", sans-serif;
  color: var(--dark-400);
  background-color: var(--bg-main);
}

/* MAIN/LANDING PAGE = START */

main {
  height: calc(100vh - 0px);
  background-color: var(--bg-main);
  color: var(--dark-400);
  padding-top: 1rem;
  padding: 5rem 5vw 2rem;
  padding-bottom: 12rem;
}

.landing-page {
  width: 66vw;
  margin: auto;
  display: grid;
  grid-template-columns: auto 1fr 1fr 1fr 0.5fr;
  grid-template-rows: auto 1fr 1fr auto auto;
  gap: 1rem;
  transform: rotate(-45deg);
}

h1 {
  font-size: calc(1.3rem + 1.8vw);
  margin: 0;
  line-height: 1.2em;
  grid-column: 1/4;
  text-align: right;
  text-transform: uppercase;
}

h2 {
  font-size: calc(1.3rem + 1.8vw);
  writing-mode: vertical-lr;
  grid-column: 3/4;
  grid-row: 2/5;
  justify-self: end;
  margin: 0;
  margin-top: -10px;
  margin-right: -10px;
  line-height: 1.2em;
  text-transform: uppercase;
  transition: all 0.2s;
}

h2 a {
  color: var(--red-400);
  text-decoration: none;
}

h2:hover {
  transform: scale(1.05);
  color: #f03129;
}

h2 a:hover {
  color: #f03129;
}

.landing-subtitle {
  margin: 0;
  font-weight: 700;
  border-top: 5px solid var(--dark-400);
  border-bottom: 5px solid var(--dark-400);
  grid-row: 3;
  grid-column: 4/6;
  align-self: end;
  font-size: 1em;
}

.landing-nav {
  grid-column: 1/3;
  grid-row: 4 / span 2;
  align-self: end;
  line-height: 1.2;
  font-weight: 700;
  font-size: 1.3em;
}

.landing-nav p {
  border-bottom: 5px solid var(--dark-400);
}
.landing-nav ul {
  list-style-type: none;
}

.landing-nav ul a {
  color: var(--dark-400);
  text-decoration: none;
  width: 100%;
  display: block;
}

.landing-nav li {
  border-bottom: 5px solid var(--dark-400);
  text-align: left;
  padding: 2px 0;
  transition: all 0.25s;
}

.landing-nav li:hover {
  transform: scale(1.1);
  border-bottom: 5px solid var(--red-400);
  position: relative;
}

.landing-intro {
  grid-column: 3/6;
  grid-row: 5;
  font-size: 0.9rem;
  border-bottom: 25px solid var(--red-400);
  align-self: start;
  justify-content: end;
  line-height: 1.3;
  padding-bottom: 5px;
  font-size: 1.2em;
}

@media screen and (max-height: 780px) {
  main {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media screen and (max-width: 500px) {
  .landing-page {
    width: 85vw;
    grid-template-columns: auto 1fr 1fr 1fr 0.5fr;
    grid-template-rows: auto auto auto auto;
  }

  h1 {
    grid-column: 1/-1;
  }

  h2 {
    grid-column: 5;
    grid-row: 2/4;
    margin-right: -5px;
  }

  .landing-intro {
    grid-column: 1/4;
    grid-row: 3;
    margin-bottom: 10px solid var(--red-400);
  }

  .landing-nav {
    grid-column: 1/-1;
    grid-row: 5;
  }

  .landing-subtitle {
    grid-column: 1/5;
    grid-row: 2;
    margin-left: 0;
    font-size: 1.2em;
  }
}

/* LANDING PAGE MEDIA QUERY - START */

@media screen and (min-width: 500px) and (max-width: 600px) {
  .landing-page {
    width: 90vw;
  }

  .landing-subtitle {
    font-size: 1.1em;
  }
}

@media screen and (max-width: 820px) {
  .landing-page {
    transform: rotate(0deg);
    margin: auto;
    padding-top: 5rem;
    padding-bottom: 5rem;
  }
  .landing-subtitle {
    font-size: 0.85em;
  }
}
@media screen and (min-width: 999px) {
  .landing-subtitle {
    font-size: 1.2em;
  }
}

@media screen and (min-width: 1000px) {
  main {
    padding-bottom: 15rem;
  }

  .landing-page {
    width: 60vw;
  }

  .landing-subtitle {
    font-size: 1.3em;
  }
}

@media screen and (min-width: 1300px) {
  main {
    padding-bottom: 25rem;
    padding-top: 0px;
  }
  .landing-page {
    width: 49vw;
  }

  .landing-subtitle {
    font-size: 1.4em;
  }
}

@media screen and (min-width: 1500px) {
  main {
    padding-top: 0px;
  }
  .landing-subtitle {
    font-size: 1.5em;
  }
}

@media screen and (min-width: 3000px) {
  main {
    padding-top: 2rem;
  }

  .landing-intro {
    font-size: 2.5em;
  }

  .landing-subtitle {
    font-size: 3em;
  }

  .landing-nav {
    font-size: 3em;
  }
}
/* LANDING PAGE MEDIA QUERY - END */

/* TYPEWRITER EFFECT - START */
.typewriter p {
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: 0.15em solid transparent; /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  letter-spacing: 0.05em; /* Adjust as needed */
  animation: typing 4s steps(30, end), blink-caret 1s step-end 3;
}

/* The typing effect */
@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: var(--red-400);
  }
}
/* TYPEWRITER EFFECT  - END*/
/* MAIN/LANDING PAGE = END */

/* NAV - START */

nav {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  padding-top: 1vh;
  background-color: var(--bg-main);
  padding-bottom: 15px;
  visibility: hidden;
  opacity: 0;
  transition: top 500ms;
}

.show-nav {
  visibility: visible;
  opacity: 1;
  z-index: 999;
}

.nav-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 70%;
  margin: auto;
}

.nav-banner {
  font-size: 1.5em;
  font-weight: 700;
  text-transform: uppercase;
}

.nav-banner i {
  display: none;
}

.nav-menu {
  width: 100%;
}

.nav-menu ul {
  display: flex;
  list-style-type: none;
  justify-content: space-around;
  font-size: 1.2em;
}
/* ... */

